Corrected listings overflow issue. Added scroll to overflow

--- a/src/sass/components/_listings.scss
+++ b/src/sass/components/_listings.scss
@@ -73,6 +73,8 @@
   }
 
   &__items-container {
+    height: 77rem;
+    padding-right: 1rem;
     overflow-y: scroll;
 
     &--groups {
